# openguard

./: .gitignore  .yarnrc.yml  AGENTS.md  HCAPTCHA_SETUP.md  LICENSE  POSTGRESQL_MIGRATION.md  README.md  SECURITY.md  bot.py  ci.sh  conftest.py  lists.py  migrate_json_to_postgresql.py  package.json  programmer_jokes.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup_postgresql.sh  test_litellm_integration.py  test_logging_integration.py  test_messagerate.py  test_postgresql_migration.py  web_verification_template.html
cogs/: abtuser.py  ai_channel_config_cog.py  aimod.py  appeal_cog.py  automod_cog.py  ban_appeal_cog.py  botdetect.py  botstatus.py  captcha_cog.py  config_cog.py  core_ai_cog.py  credits.py  dashboard_link_cog.py  devs_facts.py  emoji_cog.py  help.py  human_moderation_cog.py  hwinfo.py  info.py  logging_cog.py  messagerate.py  mod_log_cog.py  model_management_cog.py  ping.py  raiddefence.py  shell.py  statistics.py  update.py  vanity_lock_cog.py
configs/: config.yaml
database/: __init__.py  cache.py  connection.py  models.py  operations.py
docs/: CNAME  HCAPTCHA_SETUP.md  credits.html  index.html
scripts/: build_website_prod.sh  deploy_backend.sh  deploy_frontend.sh  migrate_captcha_embeds.py  migrate_json_to_postgresql.py  setup_postgresql.sh  start_dashboard.sh  start_dashboard_prod.sh
systemd/: openguard-backend.service  openguard-bot.service  openguard-website.service
tests/: test_blog_migration.py  test_bot.py  test_channel_config.py  test_emoji_cog.py  test_human_moderation_cog.py  test_litellm_integration.py  (+5 more)
(+197 files in other folders)
